# RustClaw

./: .env.example  Cargo.toml  LICENSE  SOUL.md
crates/rustclaw-cli/: Cargo.toml  commands.rs  lib.rs
crates/rustclaw-core/: Cargo.toml  agent.rs  concurrency.rs  config.rs  message.rs  rate_limiter.rs  session.rs  tool.rs  types.rs
crates/rustclaw-gateway/: Cargo.toml  protocol.rs  server.rs  websocket.rs
crates/rustclaw-memory/: Cargo.toml  context.rs  soul.rs  workspace.rs
crates/rustclaw-plugins/: Cargo.toml  bridge.rs  loader.rs  types.rs
crates/rustclaw-runtime/: Cargo.toml  engine.rs  executor.rs  llm.rs  stream.rs
crates/rustclaw-tools/: Cargo.toml  builtin.rs  registry.rs
src/: main.rs
