[package]
name = "rustclaw"
version = "0.1.0"
edition = "2021"
authors = ["RustClaw Team"]
description = "A high-performance Rust implementation of OpenClaw AI Agent Framework with RPM control and concurrency limits"
license = "MIT"
repository = "https://github.com/rustclaw/rustclaw"
keywords = ["ai", "agent", "llm", "openclaw", "rustclaw", "framework"]
categories = ["artificial-intelligence", "asynchronous", "web-programming"]
default-run = "rustclaw"

[workspace]
members = [
    "crates/rustclaw-core",
    "crates/rustclaw-gateway",
    "crates/rustclaw-runtime",
    "crates/rustclaw-plugins",
    "crates/rustclaw-tools",
    "crates/rustclaw-memory",
    "crates/rustclaw-cli",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Web
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "limit"] }
hyper = { version = "1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.5"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Regex
regex = "1.10"

# Markdown parsing
pulldown-cmark = "0.9"
markdown = "1.0"

# Random
rand = "0.8"

# Concurrency
parking_lot = "0.12"

# CLI
clap = { version = "4.4", features = ["derive", "env", "string"] }
clap_complete = "4.4"

# Process management for TypeScript plugins
deno_core = "0.244"
deno_runtime = "0.133"

# OpenAI compatible API
openai-api-rs = "5.0"

# Utilities
once_cell = "1.19"
bytes = "1.5"
pin-project-lite = "0.2"

[dependencies]
rustclaw-core = { path = "crates/rustclaw-core" }
rustclaw-gateway = { path = "crates/rustclaw-gateway" }
rustclaw-runtime = { path = "crates/rustclaw-runtime" }
rustclaw-plugins = { path = "crates/rustclaw-plugins" }
rustclaw-tools = { path = "crates/rustclaw-tools" }
rustclaw-memory = { path = "crates/rustclaw-memory" }
rustclaw-cli = { path = "crates/rustclaw-cli" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "rustclaw"
path = "src/main.rs"
