[package]
name = "rustclaw-tools"
version = "0.1.0"
edition = "2021"
description = "Tools system for RustClaw"

[dependencies]
rustclaw-core = { path = "../rustclaw-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Regex
regex = { workspace = true }

# Time
chrono = { workspace = true }
